[gd_scene load_steps=32 format=2]

[ext_resource path="res://objects/house.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/behaviors/pulse.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/item.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Roboto-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/process.gd" type="Script" id=5]
[ext_resource path="res://assets/svg/noun_sun_2265103.svg" type="Texture" id=6]
[ext_resource path="res://assets/svg/noun_Calendar_935779.svg" type="Texture" id=7]
[ext_resource path="res://assets/svg/noun_Heat_1528214.svg" type="Texture" id=8]
[ext_resource path="res://assets/svg/noun_Hammer_2127902.svg" type="Texture" id=9]
[ext_resource path="res://assets/svg/noun_cool_3244715.svg" type="Texture" id=10]
[ext_resource path="res://assets/svg/noun_Light_1366820.svg" type="Texture" id=11]
[ext_resource path="res://scripts/house.gd" type="Script" id=12]
[ext_resource path="res://scenes/climate.gd" type="Script" id=13]
[ext_resource path="res://scenes/date.gd" type="Script" id=14]
[ext_resource path="res://scenes/ui.gd" type="Script" id=15]
[ext_resource path="res://scenes/clock.gd" type="Script" id=16]
[ext_resource path="res://components/item.gd" type="Script" id=17]
[ext_resource path="res://scripts/behaviors/pulse.gd" type="Script" id=18]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.168627, 0.721569, 0.796078, 1 )

[sub_resource type="World" id=3]
environment = SubResource( 2 )

[sub_resource type="ProceduralSky" id=4]

[sub_resource type="Environment" id=5]
background_mode = 3
background_sky = SubResource( 4 )
ambient_light_color = Color( 0.270588, 0.611765, 0.666667, 1 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0.968627, 0.941176, 0.882353, 1 )
fog_depth_begin = 0.0
tonemap_mode = 2
tonemap_white = 16.0
auto_exposure_max_luma = 0.48
auto_exposure_speed = 5.82
ssao_enabled = true
ssao_ao_channel_affect = 0.6
ssao_edge_sharpness = 2.0
glow_enabled = true
adjustment_enabled = true
adjustment_brightness = 1.31

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 100, 0.1, 100 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 0.607843, 0, 0.576471, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="CanvasItemMaterial" id=10]

[sub_resource type="DynamicFont" id=11]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 128
font_data = ExtResource( 4 )

[node name="Viewport" type="Viewport"]
size = Vector2( 1640, 2360 )
world = SubResource( 3 )
handle_input_locally = false
msaa = 4
fxaa = true
debanding = true
render_target_update_mode = 3

[node name="Integration" type="Node" parent="."]
script = ExtResource( 5 )

[node name="UpdateTimer" type="Timer" parent="Integration"]
autostart = true

[node name="World" type="Spatial" parent="."]

[node name="House" type="Spatial" parent="World" instance=ExtResource( 1 )]
script = ExtResource( 12 )

[node name="Camera" type="Camera" parent="World"]
transform = Transform( -3.63154e-08, -0.556571, 0.8308, -2.43285e-08, 0.8308, 0.556571, -1, -1.95399e-14, -4.37114e-08, 3.27265, 2.02535, -0.175953 )
environment = SubResource( 5 )
current = true
fov = 102.0

[node name="MeshInstance" type="MeshInstance" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8536, -0.0609393, 1.55786 )
layers = 1025
mesh = SubResource( 7 )
material/0 = null

[node name="SpotLight" type="SpotLight" parent="World"]
transform = Transform( -3.71873e-08, -0.525576, 0.850747, -2.29736e-08, 0.850747, 0.525576, -1, 3.01981e-14, -4.37113e-08, 3.42337, 2.57188, 0 )
light_color = Color( 1, 0.960784, 0.905882, 1 )
shadow_enabled = true
spot_attenuation = 0.870551
spot_angle = 51.8

[node name="OmniLight" type="OmniLight" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0672953, 0.364204, -0.0387232 )
light_energy = 5.0
light_cull_mask = 4293919744
omni_range = 10.0

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
heating_icon = ExtResource( 8 )
cooling_icon = ExtResource( 10 )

[node name="Tween" type="Tween" parent="UserInterface"]

[node name="TextureRect" type="TextureRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 0.118
margin_left = 1640.0
margin_right = 279.0
margin_bottom = 1361.52
rect_rotation = 89.9999
texture = SubResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Climate" type="VBoxContainer" parent="UserInterface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1137.0
margin_top = 32.0
margin_right = -28.0
margin_bottom = 161.0
custom_constants/separation = -5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UserInterface/Climate"]
margin_right = 1109.0
margin_bottom = 151.0
alignment = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UserInterface/Climate/HBoxContainer"]
material = SubResource( 10 )
margin_left = 715.0
margin_right = 843.0
margin_bottom = 151.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="TemperatureLabel" type="Label" parent="UserInterface/Climate/HBoxContainer"]
margin_left = 847.0
margin_right = 1109.0
margin_bottom = 151.0
rect_min_size = Vector2( 167, 85 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 11 )
text = "32Â°F"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UserInterface/Climate"]
margin_top = 146.0
margin_right = 1109.0
margin_bottom = 203.0
custom_constants/separation = 0
alignment = 2

[node name="ClimateIcon" type="TextureRect" parent="UserInterface/Climate/HBoxContainer2"]
modulate = Color( 0, 0.647059, 1, 1 )
margin_left = 901.0
margin_top = 9.0
margin_right = 949.0
margin_bottom = 57.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ClimateLabel" type="Label" parent="UserInterface/Climate/HBoxContainer2"]
modulate = Color( 0, 0.647059, 1, 1 )
margin_left = 949.0
margin_right = 1109.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
text = "Cooling"

[node name="Pulse" type="Node" parent="UserInterface/Climate/HBoxContainer2" instance=ExtResource( 2 )]
script = ExtResource( 18 )

[node name="DateTime" type="HBoxContainer" parent="UserInterface"]
margin_left = 42.0
margin_top = 32.0
margin_right = 252.0
margin_bottom = 117.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DateTime"]
margin_right = 532.0
margin_bottom = 212.0

[node name="Clock" type="HBoxContainer" parent="UserInterface/DateTime/VBoxContainer"]
margin_right = 532.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 16 )

[node name="ClockHourLabel" type="Label" parent="UserInterface/DateTime/VBoxContainer/Clock"]
margin_right = 142.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 13 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockSeparator" type="Label" parent="UserInterface/DateTime/VBoxContainer/Clock"]
margin_left = 146.0
margin_right = 173.0
margin_bottom = 151.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 13 )
text = ":"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockMinutesLabel" type="Label" parent="UserInterface/DateTime/VBoxContainer/Clock"]
margin_left = 177.0
margin_right = 532.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 13 )
text = "30 am"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockTimer" type="Timer" parent="UserInterface/DateTime/VBoxContainer/Clock"]
autostart = true

[node name="ClockTween" type="Tween" parent="UserInterface/DateTime/VBoxContainer/Clock"]

[node name="DayLabel" type="Label" parent="UserInterface/DateTime/VBoxContainer"]
margin_top = 155.0
margin_right = 532.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 12 )
text = "Saturday, Aug 03, 2021"
script = ExtResource( 14 )

[node name="ScrollContainer" type="ScrollContainer" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -328.0
margin_top = -198.0
margin_right = 329.0
margin_bottom = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/ScrollContainer"]
margin_right = 660.0
margin_bottom = 118.0

[node name="Item 1" type="HBoxContainer" parent="UserInterface/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 660.0
margin_bottom = 57.0
custom_constants/separation = 15
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
icon = ExtResource( 9 )
description = "Mow lawn"

[node name="Item 2" type="HBoxContainer" parent="UserInterface/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 61.0
margin_right = 660.0
margin_bottom = 118.0
custom_constants/separation = 15
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
icon = ExtResource( 7 )
when = "09/06 5:00 pm"
description = "Family dinner"

[node name="LightDialog" type="ColorRect" parent="UserInterface"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.5
margin_top = -237.5
margin_right = 260.5
margin_bottom = 237.5
color = Color( 0, 0, 0, 0.960784 )

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/LightDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/LightDialog/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 471.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UserInterface/LightDialog/MarginContainer/VBoxContainer"]
margin_right = 421.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 12 )
text = "Light 1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UserInterface/LightDialog/MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 421.0
margin_bottom = 348.0
rect_min_size = Vector2( 256, 256 )
size_flags_vertical = 6
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="UserInterface"]
anchor_top = 0.883
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.119873
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="UserInterface/Control" to="UserInterface" method="_on_Control_gui_input"]
